--- a/playground/Makefile
+++ b/playground/Makefile
@@ -19,21 +19,19 @@ INCLUDE_CORE = core
 
 CXXFLAGS = -O3 -Wall -Wl,--no-as-needed -shared -std=c++11 -fPIC -I${INCLUDE_DIRS} $(MKL_LIBS) -ldl -lpthread -lm $(INCLUDE) -I$(INCLUDE_CORE)
 
-MATLIB = _matrix${shell python3-config --extension-suffix}
+MATLIB = example${shell python3-config --extension-suffix}
 
 .PHONY: all
 all: ${MATLIB}
 
-${MATLIB}: ./core/pybindwrapper.cpp ./core/matrix.cpp ./core/base_layer.cpp ./core/linear.cpp  ./core/network.cpp ./core/loss.cpp
+${MATLIB}: ./pybindwrapper.cpp
 	rm -rf *.so __pycache__ .pytest_cache
 	${CXX} ${FPIC} $? -o $@ ${CXXFLAGS} 
-	python -c "import _matrix"
+	python -c "import example"
 #   cp $@ ./testcase/$@
 	
 
 test: ${MATLIB}
-#	python performance_test.py
-#	python -m unittest main_matrix_test.py
 	python -m unittest main_layer_test.py
 
 
